syntax = 'proto3';
service deposits {
  rpc makeDeposit(DepositRequest) returns (DepositResponse);
  rpc makeWithdraw(WithdrawRequest) returns (WithdrawResponse);
}
message DepositRequest {
  string accountId = 1;
  int32 amountInCents = 2;
}
message DepositResponse {
  string responseMessage = 1;
  int32 responseCode = 2;
}
message WithdrawRequest {
  string accountId = 1;
  int32 amountInCents = 2;
}
message WithdrawResponse {
  string responseMessage = 1;
  int32 responseCode = 2;
}